# openMaelstromAdaptiveBoundary

./: CMakeLists.txt  README.md  app.aps  cuda_gvdb_copydata.ptx  cuda_gvdb_module.ptx  imgui.ini  simulation.yaml
Configurations/BowlDrop/: config.json  config.yaml  houdini.hipnc
Configurations/CornerDamBreak/: config.yaml
Configurations/Cylinder/: config.yaml  houdini.hipnc
Configurations/DamBreak/: config.yaml
Configurations/DamBreakVal/: config.json  config.yaml  houdini.hipnc  houdini_bak12.hipnc
Configurations/DamBreakWalls/: config.json  config.yaml
Configurations/DragonBreak/: config.json  config.yaml  houdini.hipnc
Configurations/Drop/: config.yaml
Configurations/Flow/: config.yaml
Configurations/FlowPastObstacle/: config.yaml  houdini.hipnc
Configurations/HemiSphere/: config.json  config.yaml  houdini.hipnc
Configurations/Incline/: config.json  config.yaml  houdini.hipnc
Configurations/Inlet/: config.yaml
Configurations/LogoBreak/: config.yaml
Configurations/MediumDamBreak/: config.yaml  houdini.hipnc
Configurations/OutletTest/: config.yaml  houdini.hipnc
Configurations/RigidTest/: config.yaml
Configurations/RigidTest2/: config.json  config.yaml  houdini.hipnc
Configurations/RigidTest3/: config.json  config.yaml  houdini.hipnc
Configurations/RigidTest4/: config.json  config.yaml  houdini.hipnc
Configurations/RigidTest5/: config - Copy.json  config.yaml  houdini.hipnc
Configurations/RiverFlow/: config.json  config.yaml
Configurations/Stairs/: config.yaml
Configurations/SuperDambreak/: config.yaml
Configurations/Tank/: config.yaml  houdini.hipnc
Configurations/TubeFlow/: config.json  config.yaml
Configurations/Turbine/: config.json  config.yaml  houdini.hipnc
Configurations/Twist/: config.yaml  houdini.hipnc
Configurations/VMV/: config.yaml
Configurations/WaveBasin/: config.json  config.yaml  houdini.hipnc
Configurations/WaveBreak/: config.json  config.yaml  houdini.hipnc
Configurations/WavePool/: config.yaml
Configurations/Waves/: config.json  config.yaml
Configurations/XPCornerDamBreak/: config.yaml
Configurations/XPDamBreak/: config.yaml
Configurations/XPDamBreakDragon/: config.yaml
IO/alembic/: alembic.cpp
IO/config/: config.cpp  initialize.cpp  initialize.h  parser.h  snapshot.h
IO/particle/: particle.cpp
IO/renderData/: particle.cpp  particle.h
IO/vdb/: vdb.cpp
SPH/DFSPH/: dfsph.cu  dfsph.cuh
SPH/IISPH17/: iisph17.cu  iisph17.cuh
SPH/adaptivity/: AdaptivityDevice.cuh  Blending.cuh  ContinuousAdaptivity.cu  ContinuousAdaptivity.cuh  Merging.cuh  MergingBoundary.cuh  Patterns.cuh  Sharing.cuh  SharingBoundary.cuh  Splitting.cuh
SPH/ancilliary/: sortNeighborList.cu  sortNeighborList.cuh
SPH/boundary/: moving_planes.cu  moving_planes.cuh  volumeBoundary.cuh
SPH/compactMLMResort/: compactMLM.cu  compactMLM.cuh
SPH/convection/: AkinciTension.cu  AkinciTension.cuh  GisslerDrag.cu  GisslerDrag.cuh  XSPH.cu  XSPH.cuh  gravity.cu  gravity.cuh  monaghanViscosity.cu  monaghanViscosity.cuh
SPH/density/: MLSDensity.cuh  density.cu  density.cuh  shepardDensity.cu  shepardDensity.cuh
SPH/generation/: particleCleanup.cu  particleCleanup.cuh  volumeInlets.cpp  volumeInlets.cu  volumeInlets.cuh  volumeOutlets.cpp  volumeOutlets.cu  volumeOutlets.cuh
SPH/integration/: simple.cu  simple.cuh
SPH/kernelSupport/: anisotropy.cu  anisotropy.cuh
SPH/logDump/: logDump.cu  logDump.cuh
SPH/neighborhood/: basic_neighborlist.cu  basic_neighborlist.cuh  cell_neighborlist.cu  cell_neighborlist.cuh  compactCellList.cuh  compactNeighborMask.cu  compactNeighborMask.cuh  constrained_neighborlist.cu  constrained_neighborlist.cuh
SPH/pressure/: iisph.cu  iisph.cuh  iisph17_band_rb.cu  iisph17_band_rb.cuh  iisph17_pressure_boundaries_decoupled.cu  iisph17_pressure_boundaries_decoupled.cuh  iisph17_pressure_mirroring_d.cu  iisph17_pressure_mirroring_d.cuh
SPH/render/: auxilliaryMLM.cu  auxilliaryMLM.cuh
SPH/renderMLM/: renderMLM.cu  renderMLM.cuh
SPH/resort/: cluster.cuh  resort.cu  resort.cuh  resort_mlm.cu  resort_mlm.cuh
SPH/support/: enforce_symmetry.cu  enforce_symmetry.cuh
SPH/surface/: surfaceDetection.cu  surfaceDetection.cuh  surfaceDistance.cu  surfaceDistance.cuh
SPH/visualization/: visualization.cu  visualization.cuh
SPH/vorticity/: BenderVorticity.cuh  LiuVorticity.cu  LiuVorticity.cuh
cfg/: configs.sph
cmake/: FindBLOSC.cmake  FindGVDB.cmake
consoleParticles/: main.cpp
gui/: OSD.cpp  glui.cpp  glui.h  initFunctions.cpp  interaction.cpp  logWindow.cpp  main.cpp  rendering.cpp  timeWindow.cpp
imgui/: imgui_demo.cpp
jsonFiles/: adaptive.json  advection.json  boundary.json  coreModels.json  density.json  dfsph.json  iisph17_band_rb.json  iisph_mirroring_decoupled.json  iisph_pressure_boundaries_decoupled.json  inlet.json  logDump.json  neighborhoods.json  rendering.json  structures.json  support.json  surface.json
math/: SVD.h  baseTypes.h  detection.h  functions.h  get.h  kernels.h  math.h  math_constants.h  mathv2.h  matrix.h  operators.h  unit_math.h  unit_types.h
math/template/: for_struct.h  metafunctions.h
metaCode/arrays/: main.cpp
metaCode/functions/: main.cpp
metaCode/uniforms/: main.cpp
render/axisRender/: axes.cpp  axes.h
render/boundaryRender/: bounds.cpp  bounds.h
render/colorMapRender/: particle_render.cpp  particle_render.h
render/floorRender/: floor.cpp  floor.h
render/particleDirectionRender/: particleDirectionRender.cpp  particleDirectionRender.h
render/particleIndexRender/: particleIndexRender.cpp  particleIndexRender.h
render/particleRender/: particle_render.cpp  particle_render.h
render/rigidRender/: rigid_render.cpp  rigid_render.h
simulation/: functions.h  particleSystem.cpp  particleSystem.h
tools/: GeneratedParameters.cpp  ParameterManager.cpp  ParameterManager.h  color.cpp  exceptionHandling.cpp  log.cpp  log.h  pathfinder.cpp  pathfinder.h  timer.cpp  timer.h
utility/: MemoryManager.h  algorithm.h  generation.h  helpers.h  include_all.h  launcher.h  sdf.h  sdf2.h  volumeBullet.cpp  volumeBullet.h
(+168 files in other folders)
